--- a/hw/hw-2.qmd
+++ b/hw/hw-2.qmd
@@ -3,7 +3,7 @@ title: HW 2
 subtitle: Deeper dive into Midwest and NC Counties
 description: "Due: Wed, Feb 4, 11:59 pm"
 categories: HW
-draft: true
+draft: false
 ---
 
 # Introduction
