--- a/lab/lab-3.qmd
+++ b/lab/lab-3.qmd
@@ -3,7 +3,7 @@ title: Lab 3
 subtitle: Get in teams then `group_by()`
 description: "Due: End of lab on Thurs, Jan 29"
 categories: Lab
-draft: true
+draft: false
 ---
 
 # Introduction
